# CorrelationMatlab

./: LICENSE  OfflineCorrelationGUI.m  README.md  computeTransform.m  interactiveOverlay.m  loadCSV.m  loadFLMpts.m  loadImage.m  loadTEMpts.m  transformPoints.m  warpImage.m
data/: FLMImagePts.csv  Item1_ER80_G3_470x_Pt6_TEM_RegSpread9.csv  Item2_X7Y6_FLM_RegSpread9.csv  RAW_Ch0123_FlipVHRot_400x462_RGB.tif  W1127_G1_10_14_20.3.2.nav  W1127_G1_10_14_20.3.nav  X7Y6_FLM_RGB_2.tif  test.csv
data/TestResults/: FLMRgpts.csv  TEMRgpts.csv  TransformedData.csv
napari-offilinecorrelation-test/: README.md  pyproject.toml
napari-offilinecorrelation-test/src/correlation2d3d/: Nav2Points.py  NavBuilt.py  Points2Nav.py  Points2Nav_tem.py  SupportNav.py  __init__.py  _widget.py  napari.yaml  offline_widgets.py  output.nav
napari-offilinecorrelation-test/src/correlation_2d_3d.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
napari-offilinecorrelation-test/src/offlinecorr/: napari.yaml
napari-offilinecorrelation-test/src/offlinecorr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
napari-offlinecorr/: .gitignore  pyproject.toml
napari-offlinecorr/src/offlinecorr/: __init__.py  _widget.py  correlation_widget.py  image_warp_widget.py  napari.yaml  point_transform_widget.py  transform_utils.py
napari-offlinecorr/src/offlinecorr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
testing/: Template.nav  output.nav  output_15.nav  output_19.nav  output_2.nav  output_20.nav  output_21.nav  output_22.nav  output_24.nav  output_25.nav  output_26.nav  output_4.nav  output_5.nav  output_6.nav  output_7.nav  output_8.nav  woring_1.txt  working_2.txt
